--- a/student-store-ui/src/components/App/App.css
+++ b/student-store-ui/src/components/App/App.css
@@ -1,10 +1,33 @@
 .app {
+  --side-padding: 40px;
+  --content-width: 1100px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--font-dark);
   width: 100%;
   max-width: 100vw;
   height: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: row;
+  overflow-x: hidden;
+  position: relative;
 }
 .app main {
   --side-padding: 40px;
