--- a/student-store-ui/src/components/Navbar/Navbar.css
+++ b/student-store-ui/src/components/Navbar/Navbar.css
@@ -1,141 +1,198 @@
-.navbar{
-    --side-padding: 40px;
-    --dark-blue: #2c4047;
-    --bright-green: #00c385;
-    --pure-white: #fff;
-    --grey-bg: #f7f7f7;
-    --accent-orange: #ff9017;
-    --bright-red: #fe3210;
-    --muted: #969696;
-    --font-dark: #212121;
-    --font-light: #5b5b5b;
-    --border-color: #e4e4e4;
-    --star-color-filled: #e5a800;
-    --star-color-empty: #cbd4e6;
-    --content-width: 800px;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
-    width: 100%;
-    max-width: 100vw;
-    background: var(--dark-blue);
-    color: var(--pure-white);
-    height: 70px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0 var(--side-padding);
+.navbar {
+  --side-padding: 40px;
+  --content-width: 1100px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  -webkit-font-smoothing: antialiased;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 100vw;
+  background: var(--dark-blue);
+  color: var(--pure-white);
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 var(--side-padding);
 }
 
-.content{
-    --side-padding: 40px;
-    --dark-blue: #2c4047;
-    --bright-green: #00c385;
-    --pure-white: #fff;
-    --grey-bg: #f7f7f7;
-    --accent-orange: #ff9017;
-    --bright-red: #fe3210;
-    --muted: #969696;
-    --font-dark: #212121;
-    --font-light: #5b5b5b;
-    --border-color: #e4e4e4;
-    --star-color-filled: #e5a800;
-    --star-color-empty: #cbd4e6;
-    --content-width: 800px;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
-    padding: 0;
-    color: var(--font-dark);
-    max-width: var(--content-width);
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.logo {
+  --side-padding: 40px;
+  --content-width: 1100px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--font-dark);
+  width: 100px;
+  margin-right: 50px;
 }
 
-.logo{
-    --side-padding: 40px;
-    --dark-blue: #2c4047;
-    --bright-green: #00c385;
-    --pure-white: #fff;
-    --grey-bg: #f7f7f7;
-    --accent-orange: #ff9017;
-    --bright-red: #fe3210;
-    --muted: #969696;
-    --font-dark: #212121;
-    --font-light: #5b5b5b;
-    --border-color: #e4e4e4;
-    --star-color-filled: #e5a800;
-    --star-color-empty: #cbd4e6;
-    --content-width: 800px;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    color: var(--font-dark);
-    width: 100px;
-    margin-right: 50px;
+.navbar-container {
+  --side-padding: 40px;
+  --content-width: 1100px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  padding: 0;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--font-dark);
+  max-width: var(--content-width);
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-.socials{
-    --side-padding: 40px;
-    --dark-blue: #2c4047;
-    --bright-green: #00c385;
-    --pure-white: #fff;
-    --grey-bg: #f7f7f7;
-    --accent-orange: #ff9017;
-    --bright-red: #fe3210;
-    --muted: #969696;
-    --font-dark: #212121;
-    --font-light: #5b5b5b;
-    --border-color: #e4e4e4;
-    --star-color-filled: #e5a800;
-    --star-color-empty: #cbd4e6;
-    --content-width: 800px;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    color: var(--font-dark);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100px;
-    margin-right: 50px;
+.socials {
+  --side-padding: 40px;
+  --content-width: 1100px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--font-dark);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100px;
+  margin-right: 50px;
 }
 
-.links{
-    --side-padding: 40px;
-    --dark-blue: #2c4047;
-    --bright-green: #00c385;
-    --pure-white: #fff;
-    --grey-bg: #f7f7f7;
-    --accent-orange: #ff9017;
-    --bright-red: #fe3210;
-    --muted: #969696;
-    --font-dark: #212121;
-    --font-light: #5b5b5b;
-    --border-color: #e4e4e4;
-    --star-color-filled: #e5a800;
-    --star-color-empty: #cbd4e6;
-    --content-width: 800px;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    color: var(--font-dark);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    list-style-type: none;
-    margin-left: auto;
-    flex: 1;
-    max-width: 650px;
+.links {
+  --side-padding: 40px;
+  --content-width: 1100px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--font-dark);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  list-style-type: none;
+  margin-left: auto;
+  flex: 1;
+  max-width: 650px;
 }
 
-.navbar a{
-    color: white;
-    font-weight: 500;
+a {
+  color: white;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+li {
+  --side-padding: 40px;
+  --content-width: 1100px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  -webkit-font-smoothing: antialiased;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--font-dark);
+  list-style-type: none;
+  box-sizing: border-box;
+}
+
+img {
+  --side-padding: 40px;
+  --content-width: 1100px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  -webkit-font-smoothing: antialiased;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: #fff;
+  font-weight: 500;
+  box-sizing: border-box;
 }
