--- a/student-store-ui/src/components/ProductDetail/ProductDetail.css
+++ b/student-store-ui/src/components/ProductDetail/ProductDetail.css
@@ -47,6 +47,7 @@
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
   margin: 0;
+  margin-top: 10px;
   padding: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
