--- a/student-store-ui/src/components/Navbar/Navbar.css
+++ b/student-store-ui/src/components/Navbar/Navbar.css
@@ -83,7 +83,7 @@
   align-items: center;
 }
 
-.socials {
+.navbar-socials {
   --side-padding: 40px;
   --content-width: 1100px;
   --dark-blue: #2c4047;
@@ -195,4 +195,8 @@ img {
   color: #fff;
   font-weight: 500;
   box-sizing: border-box;
+}
+
+.navbar-socials svg {
+  fill: white;
 }
