--- a/student-store-ui/src/components/Footer/Footer.css
+++ b/student-store-ui/src/components/Footer/Footer.css
@@ -1,4 +1,4 @@
-.contact {
+.footer {
   --side-padding: 40px;
   --dark-blue: #2c4047;
   --bright-green: #00c385;
@@ -14,18 +14,17 @@
   --star-color-empty: #cbd4e6;
   --content-width: 800px;
   -webkit-font-smoothing: antialiased;
-  box-sizing: border-box;
-  padding: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: var(--font-dark);
+  box-sizing: border-box;
   width: 100%;
   max-width: 100vw;
-  min-height: 350px;
-  margin: 40px 0;
+  height: 350px;
+  background: var(--pure-white);
 }
 
-.contact-content {
+.footer .content {
   --side-padding: 40px;
   --dark-blue: #2c4047;
   --bright-green: #00c385;
@@ -51,10 +50,11 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  min-height: 350px;
+  height: 350px;
+  background: var(--pure-white);
 }
 
-.contact-summary {
+.top {
   --side-padding: 40px;
   --dark-blue: #2c4047;
   --bright-green: #00c385;
@@ -75,103 +75,42 @@
   padding: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--font-dark);
+  flex: 1;
+  padding-top: 40px;
+}
+
+.links {
+  --side-padding: 40px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  --content-width: 1100px;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--font-dark);
   display: flex;
   flex-direction: row;
-  background: var(--dark-blue);
-  color: var(--pure-white);
-  height: 330px;
-  border: solid 1px #e0e0e0;
-  overflow: visible;
-}
-
-.contact-info {
-  --side-padding: 40px;
-  --dark-blue: #2c4047;
-  --bright-green: #00c385;
-  --pure-white: #fff;
-  --grey-bg: #f7f7f7;
-  --accent-orange: #ff9017;
-  --bright-red: #fe3210;
-  --muted: #969696;
-  --font-dark: #212121;
-  --font-light: #5b5b5b;
-  --border-color: #e4e4e4;
-  --star-color-filled: #e5a800;
-  --star-color-empty: #cbd4e6;
-  --content-width: 800px;
-  -webkit-font-smoothing: antialiased;
-  box-sizing: border-box;
-  margin: 0;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  padding: 28px 36px;
-  color: var(--pure-white);
-  list-style-type: none;
-  flex: 1;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-}
-
-.contact-info li {
-  --side-padding: 40px;
-  --dark-blue: #2c4047;
-  --bright-green: #00c385;
-  --pure-white: #fff;
-  --grey-bg: #f7f7f7;
-  --accent-orange: #ff9017;
-  --bright-red: #fe3210;
-  --muted: #969696;
-  --font-dark: #212121;
-  --font-light: #5b5b5b;
-  --border-color: #e4e4e4;
-  --star-color-filled: #e5a800;
-  --star-color-empty: #cbd4e6;
-  --content-width: 800px;
-  -webkit-font-smoothing: antialiased;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  list-style-type: none;
-  box-sizing: border-box;
-  color: var(--pure-white);
-  margin-bottom: 18px;
-  font-size: 18px;
-  display: flex;
-  align-items: center;
+  max-width: var(--content-width);
   width: 100%;
 }
 
-.contact-info .label {
-  --side-padding: 40px;
-  --dark-blue: #2c4047;
-  --bright-green: #00c385;
-  --pure-white: #fff;
-  --grey-bg: #f7f7f7;
-  --accent-orange: #ff9017;
-  --bright-red: #fe3210;
-  --muted: #969696;
-  --font-dark: #212121;
-  --font-light: #5b5b5b;
-  --border-color: #e4e4e4;
-  --star-color-filled: #e5a800;
-  --star-color-empty: #cbd4e6;
-  --content-width: 800px;
-  -webkit-font-smoothing: antialiased;
-  list-style-type: none;
-  font-size: 18px;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  width: 100px;
-  margin-right: 20px;
-  color: var(--pure-white);
-}
-
-.contact-media {
+.link-column {
   --side-padding: 40px;
   --dark-blue: #2c4047;
   --bright-green: #00c385;
@@ -195,12 +134,11 @@
   color: var(--font-dark);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  height: 330px;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
-.contact-media img {
+.link-column h4 {
   --side-padding: 40px;
   --dark-blue: #2c4047;
   --bright-green: #00c385;
@@ -216,66 +154,65 @@
   --star-color-empty: #cbd4e6;
   --content-width: 800px;
   -webkit-font-smoothing: antialiased;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  color: var(--font-dark);
-  box-sizing: border-box;
-  transform: translateY(-2px);
-}
-
-.contact-header {
-  --side-padding: 40px;
-  --dark-blue: #2c4047;
-  --bright-green: #00c385;
-  --pure-white: #fff;
-  --grey-bg: #f7f7f7;
-  --accent-orange: #ff9017;
-  --bright-red: #fe3210;
-  --muted: #969696;
-  --font-dark: #212121;
-  --font-light: #5b5b5b;
-  --border-color: #e4e4e4;
-  --star-color-filled: #e5a800;
-  --star-color-empty: #cbd4e6;
-  --content-width: 800px;
-  -webkit-font-smoothing: antialiased;
-  box-sizing: border-box;
-  padding: 0;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  color: var(--font-dark);
-  margin: 10px 0 30px;
-  font-size: 24px;
-  font-weight: 600;
-}
-
-.contact-socials {
-  --side-padding: 40px;
-  --dark-blue: #2c4047;
-  --bright-green: #00c385;
-  --pure-white: #fff;
-  --grey-bg: #f7f7f7;
-  --accent-orange: #ff9017;
-  --bright-red: #fe3210;
-  --muted: #969696;
-  --font-dark: #212121;
-  --font-light: #5b5b5b;
-  --border-color: #e4e4e4;
-  --star-color-filled: #e5a800;
-  --star-color-empty: #cbd4e6;
-  --content-width: 800px;
-  -webkit-font-smoothing: antialiased;
-  list-style-type: none;
-  font-size: 18px;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  margin-right: 20px;
-  color: var(--pure-white);
+  color: var(--font-dark);
+  margin-bottom: 10px;
+}
+
+.link-column ul {
+  --side-padding: 40px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  --content-width: 800px;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--font-dark);
   display: flex;
+  flex-direction: column;
+  list-style-type: none;
+}
+
+.link-column li {
+  --side-padding: 40px;
+  --dark-blue: #2c4047;
+  --bright-green: #00c385;
+  --pure-white: #fff;
+  --grey-bg: #f7f7f7;
+  --accent-orange: #ff9017;
+  --bright-red: #fe3210;
+  --muted: #969696;
+  --font-dark: #212121;
+  --font-light: #5b5b5b;
+  --border-color: #e4e4e4;
+  --star-color-filled: #e5a800;
+  --star-color-empty: #cbd4e6;
+  --content-width: 800px;
+  -webkit-font-smoothing: antialiased;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  list-style-type: none;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  width: 150px;
+  color: var(--font-light);
+  margin-top: 10px;
 }
