--- a/student-store-ui/src/components/Hero/Hero.css
+++ b/student-store-ui/src/components/Hero/Hero.css
@@ -46,7 +46,8 @@
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: var(--font-dark);
-  background: var(--bright-green);
+  background: #576ca8;
+  border-radius: 10px;
   max-width: 1100px;
   width: 100%;
   margin: 0 auto;
