--- a/student-store-ui/src/components/Navbar/Navbar.css
+++ b/student-store-ui/src/components/Navbar/Navbar.css
@@ -151,7 +151,7 @@ a {
   text-decoration: none;
 }
 
-li {
+.links li {
   --side-padding: 40px;
   --content-width: 1100px;
   --dark-blue: #2c4047;
