--- a/student-store-ui/src/components/ProductCard/ProductCard.css
+++ b/student-store-ui/src/components/ProductCard/ProductCard.css
@@ -382,8 +382,8 @@ svg {
   -webkit-font-smoothing: antialiased;
   width: 20px;
   height: 20px;
-  border: solid 1px var(--bright-green);
-  color: var(--bright-green);
+  border: solid 1px #576ca8;
+  color: #576ca8;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -420,8 +420,8 @@ svg {
   -webkit-font-smoothing: antialiased;
   width: 20px;
   height: 20px;
-  border: solid 1px var(--bright-green);
-  color: var(--bright-green);
+  border: solid 1px #576ca8;
+  color: #576ca8;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -491,7 +491,7 @@ svg {
   padding: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: green;
+  background: #576ca8;
   color: #fff;
   width: 20px;
   height: 20px;
