--- a/student-store-ui/src/components/App/App.css
+++ b/student-store-ui/src/components/App/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+
 .app {
   --side-padding: 40px;
   --content-width: 1100px;
@@ -17,8 +19,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Roboto, Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
   color: var(--font-dark);
   width: 100%;
   max-width: 100vw;
